new dimensions & some fixes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -33,8 +34,8 @@
 
 <body class="wy-body-for-nav" role="document">
 
-  <div><a href="http://help.k50.ru/tracker">K☆50:Трекер</a></div>
-  <div><a href="http://help.k50.ru/tracker-api">API K☆50:Трекера</a></div>
+  <div><a href="./tracker">K☆50:Трекер</a></div>
+  <div><a href="./tracker-api">API K☆50:Трекера</a></div>
 <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TRCLJ2"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
