--- a/tracker-api/token_authorization/index.html
+++ b/tracker-api/token_authorization/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -149,21 +150,21 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="section">
               
                 <h2 id="_1">Авторизация по токену</h2>
-<p>Авторизация по токену позволяет обращаться к API от имени любого пользователя, который разрешил доступ к своим проектам. В запросе указывают ключ token — <a href="../token_creation">авторизационный токен</a>, созданный пользователем в <a href="https://passport.k50.ru" target="_blank">passport.k50.ru</a>.
+<p>Авторизация по токену позволяет обращаться к API от имени любого пользователя, который разрешил доступ к своим проектам. В запросе указывают ключ token — <a href="../token_creation">авторизационный токен</a>, созданный пользователем в <a href="https://passport.k50.ru" target="_blank">passport.k50.ru</a>.<br />
 Токен необходимо передавать для каждого метода в HTTP-заголовке <code>apiKey</code> или в параметрах URL.</p>
 <h3 id="_2">Пример запроса с токеном в заголовках</h3>
 <blockquote>
-<p><strong>Request URL</strong>: "http://api.tracker.k50.ru/api/me"<br/>
-<strong>Request Method</strong>:GET<br/><br/>
-<strong>Request Headers</strong>: <br/>
-<strong>apiKey</strong>: <code>8dc57515-2c3d-4ebe-o845-vzd663e59c709</code><br/>
+<p><strong>Request URL</strong>: "http://api.tracker.k50.ru/api/me"<br />
+<strong>Request Method</strong>:GET</p>
+<p><strong>Request Headers</strong>:<br />
+<strong>apiKey</strong>: <code>8dc57515-2c3d-4ebe-o845-vzd663e59c709</code><br />
 <strong>Content-Type</strong>:application/json</p>
 </blockquote>
 <h3 id="url">Пример запроса с токеном в параметрах URL</h3>
 <blockquote>
-<p><strong>Request URL</strong>: "http://api.tracker.k50.ru/api/me?apiKey= <code>8dc57515-2c3d-4ebe-o845-vzd663e59c709</code>"<br/>
-<strong>Request Method</strong>:GET<br/><br/>
-<strong>Request Headers</strong>:<br/>
+<p><strong>Request URL</strong>: "http://api.tracker.k50.ru/api/me?apiKey= <code>8dc57515-2c3d-4ebe-o845-vzd663e59c709</code>"<br />
+<strong>Request Method</strong>:GET</p>
+<p><strong>Request Headers</strong>:<br />
 <strong>Content-Type</strong>:application/json</p>
 </blockquote>
               
