--- a/tracker/calltracking/features/index.html
+++ b/tracker/calltracking/features/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -279,7 +280,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               
                 <h1 id="50">Особенности коллтрекинга К50</h1>
 <h2 id="_1">Типы коллтрекинга</h2>
-<p>К50:Трекер использует технологии статического (закрепление номера за источником) и динамического коллтрекинга (закрепление номера за пользователем). Также доступен уникальный тип ротации номеров, который позволит ещё больше снизить стоимость коллтрекинга для определенных задач (подробности см. ниже).
+<p>К50:Трекер использует технологии статического (закрепление номера за источником) и динамического коллтрекинга (закрепление номера за пользователем). Также доступен уникальный тип ротации номеров, который позволит ещё больше снизить стоимость коллтрекинга для определенных задач (подробности см. ниже).<br />
 Таким образом, вы можете настроить коллтрекинг, выполняющий ваши задачи по оптимальной цене.</p>
 <h2 id="_2">Очень простое подключение</h2>
 <p>Для начала работы с коллтрекингом достаточно установить на сайт код счетчика:</p>
@@ -287,7 +288,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 &lt;script&gt;var k50TrackerInstance = k50Tracker.init({siteId: XXXXXXX});&lt;/script&gt;
 </code></pre>
 
-<p>Прочие настройки осуществляются непосредственно в интерфейсе трекера.
+<p>Прочие настройки осуществляются непосредственно в интерфейсе трекера.<br />
 Код можно вставлять через Google Tag Manager</p>
 <h2 id="_3">Параллельная ротация номеров</h2>
 <p>Вы можете одновременно закреплять за пользователем любое число номеров. При этом все данные будут доступны в одном счетчике.</p>
