--- a/tracker/calltracking/price/index.html
+++ b/tracker/calltracking/price/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -280,7 +281,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p>Стоимость номера зависит от его кода. Так, номера в коде <strong>499</strong> будут стоить дешевле, чем номера в коде <strong>495</strong></p>
 <h2 id="_3">Пакет минут на переадресацию</h2>
 <p>На все номера кроме (8800) предоставляется <strong>3000 минут</strong> на переадресацию звонков. Стоимость минут сверх пакета составляет <strong>1руб/мин</strong></p>
-<p><strong>Использование sip-номеров</strong><br/>
+<p><strong>Использование sip-номеров</strong><br/><br />
 Вы можете настроить передаресацию на sip-номер. В этом случае вам будет доступно <strong>10000 минут</strong> на переадресацию звонков. Стоимость минут сверз пакета составляет <strong>0.1руб/мин</strong></p>
 <h2 id="_4">Расчет стоимости подключения</h2>
 <p>Вы можете самостоятельно рассчитать стоимость подключения с помощью калькулятора на <a href="http://k50.ru/servisy/k50-tracker/" target="_blank">нашем сайте</a> либо <a href="mailto:welcome@k50.ru" target="_blank">оставить заявку на почту</a></p>
