--- a/tracker/code-tracker/index.html
+++ b/tracker/code-tracker/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -272,25 +273,25 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <h1 id="_1">Кодовый трекер</h1>
 <p>Кодовый трекер - технология определения источников обращений клиентов с помощью кодов заявок (трек-кодов). Данный функционал доступен всем пользователям трекера, <strong>бесплатно</strong> .</p>
 <h2 id="_2">Настройка кода</h2>
-<p>После <a href="../first-steps/">создания счетчика</a> перейдите в настройки кода отслеживания.
+<p>После <a href="../first-steps/">создания счетчика</a> перейдите в настройки кода отслеживания.<br />
 <img alt="Настройки кода" src="../code_1.png" /></p>
 <p>Обратите внимание на следующие параметры</p>
 <p><strong>Разрядность счетчика</strong> <img alt="Цифра_1" src="../reports/dig_1.png" /></p>
-<p>Данная настройка задаёт максимальное количество цифр в трек-коде. Например при разрядность 6 (5+1) id заявки будет находиться в интервале от 1 до 999999.
-Разрядность следует выбирать в соответствии порядком вашей дневной посещаемости.
+<p>Данная настройка задаёт максимальное количество цифр в трек-коде. Например при разрядность 6 (5+1) id заявки будет находиться в интервале от 1 до 999999.<br />
+Разрядность следует выбирать в соответствии порядком вашей дневной посещаемости.<br />
 Например, при посещаемости 1000 в день рекомендуемая разрядность составит 4 (3+1).</p>
-<blockquote>
-<p><strong>Обратите внимание</strong><br/>
-Если указанная разрядность ниже рекомендуемой, возможно некорректное отслеживание обращений.</p>
-</blockquote>
+<div class="admonition important">
+<p class="admonition-title">Обратите внимание</p>
+<p>Если указанная разрядность ниже рекомендуемой, возможно некорректное отслеживание обращений.</p>
+</div>
 <p><strong>Селектор элемента на странице для размещения кода</strong> <img alt="Цифра_2" src="../reports/dig_2.png" /></p>
 <p>Данная настройка позволяет указать с помощью CSS селекторов html-элемент, в который следует подставлять трек-код. По умолчанию код подставляется в элемент div с id <code>k50-track-code</code>, который отображается над всеми элементами сайта.</p>
 <p>Вы можете указать свой собственный элемент (например, внедрить код в интерфейс корзины), изменив селектор в настройках.</p>
 <h2 id="_3">Установка кода на сайт</h2>
 <p>Настроив код, скопируйте его и вставьте на все страницы перед <code>&lt;/body&gt;</code>. Вы можете установить код с помощью Google Tag Manager</p>
 <blockquote>
-<p><strong>Обратите внимание</strong><br/>
-По умолчанию код обращаеся к библиотеке <code>http://cdn.k50.ru/k50/k50tracker2.js</code>.<br/>
+<p><strong>Обратите внимание</strong><br/><br />
+По умолчанию код обращаеся к библиотеке <code>http://cdn.k50.ru/k50/k50tracker2.js</code>.<br/><br />
 Для HTTPS сайтов следует её заменить на <code>https://k50-a.akamaihd.net/k50/k50tracker2.js</code></p>
 </blockquote>
 <h2 id="_4">Добавление заказа</h2>
@@ -299,7 +300,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p>Далее при добавлении заказа следует указать код заявки, который сообщил пользователь, чтобы трекер ассоциировал заказ с посещением.</p>
 <p>Подробнее читайте в разделе <a href="../reports/orders/">Список Заказов</a></p>
 <h2 id="_5">Отчеты</h2>
-<p>Статистика по сопоставленным обращениям будет доступна в <a href="../reports/report-configurator/">Конструкторе отчетов</a>
+<p>Статистика по сопоставленным обращениям будет доступна в <a href="../reports/report-configurator/">Конструкторе отчетов</a><br />
 Данные по обращениям, сумме и марже, указанные в заказе, будут пробрасываться в метриках <strong>заказы</strong>, <strong>доход</strong> и <strong>маржа</strong>.</p>
 <h2 id="_6">Экспорт данные в стронние сервисы</h2>
 <p>Вы можете экспортировать данные в К50 статистику, Google Analytics, а также в любой другой источник с помощью API трекера. Подробнее читайте в разделе про интеграцию с внешними системами</p>
