--- a/tracker/faq/index.html
+++ b/tracker/faq/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -290,8 +291,30 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="section">
               
                 <h1 id="_1">Часто задаваемые вопросы</h1>
+<div class="toc">
+<ul>
+<li><a href="#_1">Часто задаваемые вопросы</a><ul>
+<li><a href="#_2">Сколько стоит ваш коллтрекинг?</a></li>
+<li><a href="#_3">Что входит в стоимость?</a></li>
+<li><a href="#3000">Что будет, если я проговорю больше 3000 минут за месяц?</a></li>
+<li><a href="#_4">Я точно знаю, что данного пакета мне недостаточно. Что я могу сделать, чтобы не доплачивать за превышение пакета?</a></li>
+<li><a href="#_5">Какова погрешность ваших расчетов?</a></li>
+<li><a href="#_6">Для каких источников я могу настроить коллтрекинг?</a></li>
+<li><a href="#_7">Сколько времени занимает подключение?</a></li>
+<li><a href="#-">Что нужно для настройки подключения? Нужно ли какое-то тех. задание?</a></li>
+<li><a href="#_8">С какими сервисами вы можете интегрироваться?</a></li>
+<li><a href="#_9">Я хочу работать со своими номерами. Возможно ли их использовать в вашем сервисе?</a></li>
+<li><a href="#crm">Какие CRM вы можете подключить к трекеру?</a></li>
+<li><a href="#api">Как мне получить доступ к API вашего коллтрекинга?</a></li>
+<li><a href="#_10">Какие способы оплаты поддерживаете?</a></li>
+<li><a href="#_11">Какова начальная цена сервиса?</a></li>
+<li><a href="#_12">Предоставляете ли вы индивидуальные условия для агентств?</a></li>
+</ul>
+</li>
+</ul>
+</div>
 <h2 id="_2">Сколько стоит ваш коллтрекинг?</h2>
-<p>Стоимость зависит от посещаемости, среднего времени длительности посещения на сайте и кода номера, который вы собираетесь использовать.
+<p>Стоимость зависит от посещаемости, среднего времени длительности посещения на сайте и кода номера, который вы собираетесь использовать.<br />
 Вы можете самостоятельно рассчитать стоимость подключения с помощью калькулятора на <a href="http://k50.ru/servisy/k50-tracker/" target="_blank">нашем сайте</a> либо <a href="mailto:welcome@k50.ru" target="_blank">оставить заявку на почту</a></p>
 <h2 id="_3">Что входит в стоимость?</h2>
 <p>Стоимость формируется на основе следующих параметров:</p>
@@ -335,10 +358,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <h2 id="api">Как мне получить доступ к API вашего коллтрекинга?</h2>
 <p>См. раздел <a href="" title="integration/tracker-api">API Трекера</a></p>
 <h2 id="_10">Какие способы оплаты поддерживаете?</h2>
-<p>Мы поддерживаем оплату всеми стандартными способами:
-+ Оплата картой
-+ Банковский перевод
-+ Электронные кошельки: яндекс.деньги, webmoney
+<p>Мы поддерживаем оплату всеми стандартными способами:<br />
++ Оплата картой<br />
++ Банковский перевод<br />
++ Электронные кошельки: яндекс.деньги, webmoney<br />
 + Наличными через терминалы в связном, евросети и пр. (см. <a href="https://money.yandex.ru/pay/doc.xml?id=526209&cps_theme=default" target="_blank">полный список</a>)</p>
 <h2 id="_11">Какова начальная цена сервиса?</h2>
 <ul>
