--- a/tracker/first-steps/index.html
+++ b/tracker/first-steps/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -274,14 +275,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p>Каждый пользователь К50 имеет доступ к <a href="https://cabinet.k50.ru" target="_blank">кабинету</a>, в котором отображаются все проекты, доступные пользователю. Здесь же можно создать новый проект.</p>
 <p>Для выбранного проекта следует создать инстанс трекера и назначить проекту подписку.</p>
 <h2 id="3">Шаг 3. Создайте счетчик</h2>
-<p>Перейдите в Трекер. Нажмите кнопку Добавить счётчик. Откроется страница общих настроек счетчика.
-Обратите внимание на следующие разделы:
-<strong>Общие настройки</strong>
+<p>Перейдите в Трекер. Нажмите кнопку Добавить счётчик. Откроется страница общих настроек счетчика.<br />
+Обратите внимание на следующие разделы:<br />
+<strong>Общие настройки</strong><br />
   Необходимо обязательно указать домен сайта и название счётчика.</p>
-<p><strong>Код счетчика</strong>
+<p><strong>Код счетчика</strong><br />
   Раздел позволяет сформировать код счетчика.</p>
 <h2 id="4">Шаг 4. Установите счётчик на сайт</h2>
-<p>В разделе Код счётчика нажмите кнопку Скопировать в буфер. Затем добавьте этот код в HTML-код всех страниц сайта. Рекомендуем разместить его перед <code>&lt;/body&gt;</code>.
+<p>В разделе Код счётчика нажмите кнопку Скопировать в буфер. Затем добавьте этот код в HTML-код всех страниц сайта. Рекомендуем разместить его перед <code>&lt;/body&gt;</code>.<br />
 Так же возможна установка кода через Google Tag Manager</p>
               
             </div>
