--- a/tracker/index.html
+++ b/tracker/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -260,7 +261,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="section">
               
                 <h1 id="_1">О сервисе</h1>
-<p><a href="http://k50.ru/servisy/k50-tracker/" target="_blank">K☆50 Трекер</a> — это сервис отслеживания offline и online взаимодействий с сайтом клиента. Он позволяет анализировать:</p>
+<p><a href="http://tracker.k50.ru" target="_blank">K☆50 Трекер</a> — это сервис отслеживания offline и online взаимодействий с сайтом клиента. Он позволяет анализировать:</p>
 <ul>
 <li>эффективность каналов привлечения в разрезе телефонных обращений</li>
 <li>выручку и конверсию в отгруженные заказы с offline/online взаимодействий;</li>
@@ -312,5 +313,5 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <!--
 MkDocs version : 0.14.0
-Build Date UTC : 2016-01-15 14:11:43.310000
+Build Date UTC : 2016-02-04 21:11:05.432000
 -->
