--- a/tracker/integration/crm/index.html
+++ b/tracker/integration/crm/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -268,12 +269,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="section">
               
                 <h1 id="crm">Интеграция с CRM</h1>
-<p>Вы можете интегрировать в К50:Трекер данные о заказах из собственной CRM. При корректной интеграции трекер сопоставит все заказы после online заявок на сайте и после звонков по телефону (при подключенном коллтрекинге).
+<p>Вы можете интегрировать в К50:Трекер данные о заказах из собственной CRM. При корректной интеграции трекер сопоставит все заказы после online заявок на сайте и после звонков по телефону (при подключенном коллтрекинге).<br />
 Информацию о сопоставленных заказах можно экспортировать в К50 Статистику, Google Analytics либо в любую другую систему с помощью API трекера.</p>
 <h2 id="_1">Предварительные приготовления</h2>
 <p><strong>Заказы после отправки заявки на сайте</strong></p>
 <p>Все заказы, совершенные после отправки заявки на сайте (будем называть их online заказами) сопоставляются по идентификатору сеанса (sid) и пользователя (uuid), выданные трекером. Поэтому для сопоставления online заказов следует передавать эти параметры в CRM.</p>
-<p>Получить параметры можно с помощью метода <code>getResultData()</code> объекта <code>k50TrackerInstance</code> (данный javascript объект создаётся во время инициализации счетчика), который возвращает объект с требуемыми идентификаторами.
+<p>Получить параметры можно с помощью метода <code>getResultData()</code> объекта <code>k50TrackerInstance</code> (данный javascript объект создаётся во время инициализации счетчика), который возвращает объект с требуемыми идентификаторами.<br />
 Иными словами, идентификаторы можно получить следующим образом:</p>
 <p>Идентификатор сеанса</p>
 <pre><code class="javascript">var sid = k50TrackerInstance.getResultData().sid
@@ -284,13 +285,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </code></pre>
 
 <p><strong>Заказы после звонка клиента</strong></p>
-<p>Заказы, совершенные после звонка клиента (будем относить их к offline заказам), сопоставляются иначе, поскольку передача идентификатора сеанса для них невозможна.
+<p>Заказы, совершенные после звонка клиента (будем относить их к offline заказам), сопоставляются иначе, поскольку передача идентификатора сеанса для них невозможна.<br />
 Данные заказы сопоставляются по номер телефона, с которого <strong>звонил клиент</strong>. Поэтому следует обеспечить отправку таких данных в CRM (часто в CRM сохраняют только номер, указанный пользователем в качестве контактного)</p>
 <h2 id="_2">Подготовка фида с данными</h2>
 <p>Данные о заказах принимаются в виде CSV фида. К50:Трекер должен иметь доступ по ссылке к данному фиду.</p>
 <p><strong>Формат фида</strong></p>
-<p>Формат файла - <code>CSV</code>
-Разделитель - <code>;</code>
+<p>Формат файла - <code>CSV</code><br />
+Разделитель - <code>;</code><br />
 Кодировка - <code>UTF-8</code></p>
 <p><strong>Название заголовков файла</strong></p>
 <p><strong>Жирным</strong> отмечены обязательные поля</p>
