--- a/tracker/integration/google-analytics/index.html
+++ b/tracker/integration/google-analytics/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -270,13 +271,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <h1 id="google-analytics">Интеграция с Google Analytics</h1>
 <p>Вы можете настроить отправку звонков и заказов в Google Analytics.</p>
 <h2 id="_1">Настройка интеграции</h2>
-<p>Для этого необходимо указать идентификаторы счетчиков, в которые вы желаете отправлять данные и что вы хотите туда отправлять (например, только уникальные звонки). Далее трекер начнет автоматически собирать информацию об идентификаторе клиента, выданный Google Analytics пользователям и отправлять события в GA события.
+<p>Для этого необходимо указать идентификаторы счетчиков, в которые вы желаете отправлять данные и что вы хотите туда отправлять (например, только уникальные звонки). Далее трекер начнет автоматически собирать информацию об идентификаторе клиента, выданный Google Analytics пользователям и отправлять события в GA события.<br />
 Такой способ интеграции позволяет анализировать данные с привязкой к пользователям Google Analytics, смотреть отчеты в разрезе регионов, браузеров, ключевых слов и формировать списки ремаркетинга для AdWords.</p>
-<blockquote>
-<p><strong>Обратите внимание</strong><br/>
-Привязка данных к пользователям Google Analytics осуществляется только для звонков и заказов, ассоциированных с посещением в трекере.
+<div class="admonition important">
+<p class="admonition-title">Обратите внимание</p>
+<p>Привязка данных к пользователям Google Analytics осуществляется только для звонков и заказов, ассоциированных с посещением в трекере.<br />
 Так, звонки с динамических пулов номеров будут передаваться с привязкой к client_id Google Analytics. Звонки со статических пулов - будут отправляться без привязки к существующим client_id и будут трактоваться GA как новые пользователи </p>
-</blockquote>
+</div>
 <h2 id="_2">Значения событий по умолчанию</h2>
 <p><strong>Звонки</strong></p>
 <table>
