--- a/tracker/integration/k50/index.html
+++ b/tracker/integration/k50/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -272,7 +273,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <h1 id="50">Интеграция с Оптимизатором К50</h1>
 <p>Вы можете передавать данные о звонках и заказах, собранные в трекере, в К50:Оптимизатор. Они позволят вам проводить более детальный анализ рекламных кампаний с помощью статистики, обогощая выборку данных для оптимизации с помощью правил и стратегий.</p>
 <h2 id="_1">Получение токена доступа</h2>
-<p>Для подключения трекера к К50:Оптимизатору вам необходимо получить токен доступа. Процедура получения описана в разделе <a href="./tracker-api/token_authorization/">получение токена доступа</a>. </p>
+<p>Для подключения трекера к К50:Оптимизатору вам необходимо получить токен доступа. Процедура получения описана в разделе <a href="http://help.k50.ru/tracker-api/token_authorization/">получение токена доступа</a>. </p>
 <h2 id="_2">Подключение к Оптимизатору</h2>
 <p>Подключение к Оптимизатору осуществляется через подключение <strong>Учета звонков и заказов</strong></p>
 <p><img alt="Учет звонков и заказов" src="../k50_11.png" /></p>
