--- a/tracker/reports/calls/index.html
+++ b/tracker/reports/calls/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -280,20 +281,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <h1 id="_1">Список звонков</h1>
 <p>Список звонков предоставляет подробную информацию по каждому звонку с указанием даты звонка, его длительности и номеров телефона, с которых осуществлялся звонок. Для каждого звонка предоставляется последовательность посещений пользователя до этого звонка. Отчет строится за определенный период времени. По умолчанию он соответствует месяцу.</p>
 <h2 id="_2">Настройка отчета</h2>
-<p>Ниже описаны инструменты, с помощью которых вы можете настроить вид отчета:
+<p>Ниже описаны инструменты, с помощью которых вы можете настроить вид отчета:<br />
 <img alt="Пример отчета" src="../calls_1.png" /></p>
 <h2 id="_3">Фильтры <img alt="Цифра_1" src="../dig_1.png" /></h2>
-<p>Фильтры позволяют работать со звонками, удовлетворяющими определенным условиям.
+<p>Фильтры позволяют работать со звонками, удовлетворяющими определенным условиям.<br />
 Условия могут применяться на все параметры звонка (номер клиента, длительность звонка и пр.), а также на параметры ассоциированного со звонком посещения (страница входа, реферер и пр.).</p>
 <p><img alt="Настройка фильтра" src="../calls_11.png" /></p>
 <p>Используемые фильтры отображаются в отдельной панели, из которой их можно оперативно убрать.</p>
 <p><img alt="Примененные фильтры" src="../calls_12.png" /></p>
 <h2 id="csv">Выгрузка CSV <img alt="Цифра_2" src="../dig_2.png" /></h2>
-<p>Позволяет выгружать отчет в формате CSV.
-В выгрузке будут предоставлены данные:
-- по всем параметрам звонка (номер клиента, длительность звонка и пр.)
-- по параметрам ассоциированного со звонком посещения (страница входа, реферер и пр.)
-- за выбранный период
+<p>Позволяет выгружать отчет в формате CSV.<br />
+В выгрузке будут предоставлены данные:<br />
+- по всем параметрам звонка (номер клиента, длительность звонка и пр.)<br />
+- по параметрам ассоциированного со звонком посещения (страница входа, реферер и пр.)<br />
+- за выбранный период<br />
 - с учетом активных фильтров.</p>
 <h2 id="_4">Период отчета <img alt="Цифра_3" src="../dig_3.png" /></h2>
 <p>Вы можете выбрать календарный период времени, за который будет построен отчет. По умолчанию отображаются данные за месяц. Доступны стандартные диапазоны дат, также можно выбрать собственный диапазон.</p>
@@ -307,13 +308,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p>Каждому звонку соответствует цепочка посещений сайта позвонившего пользователя. Количество посещений в цепочке и набор параметров посещения могут отличаться в зависимости от типа ротации номеров (статическая или динамическая) и паттернов поведения пользователя.</p>
 <p>Рассмотрим посещение из цепочки:</p>
 <p><img alt="Пример посещения" src="../calls_10.png" /></p>
-<p><strong>Порядковы номер посещения</strong><br/>
+<p><strong>Порядковы номер посещения</strong><br/><br />
 Каждое посещение имеет свой порядковый номер в цепочке. Порядковый номер отображается вверху информации о посещении (например, <img alt="Пример посещения" src="../calls_52.png" />)</p>
-<p><strong>Ассоциированные со звонком посещения</strong><br/>
-Ассоциированные посещения - посещения, в рамках которых пользователю был показан номер телефона, на который он позвонил в течение времени резерва номера(т.е. можем однозначно сопоставить звонок с посещением). Информация о таких посещениях (источники трафика, браузеры, устройства и пр.) ассоциируется с текущим звонком и будет использоваться далее в остальных отчетах.
-Такие посещения имеют следующий ярлык:
+<p><strong>Ассоциированные со звонком посещения</strong><br/><br />
+Ассоциированные посещения - посещения, в рамках которых пользователю был показан номер телефона, на который он позвонил в течение времени резерва номера(т.е. можем однозначно сопоставить звонок с посещением). Информация о таких посещениях (источники трафика, браузеры, устройства и пр.) ассоциируется с текущим звонком и будет использоваться далее в остальных отчетах.<br />
+Такие посещения имеют следующий ярлык:<br />
 <img alt="Ассоциированные посещения" src="../calls_51.png" /></p>
-<p><strong>Параметры посещения</strong><br/>
+<p><strong>Параметры посещения</strong><br/><br />
 Каждое посещение может иметь следующие параметры</p>
 <table>
 <thead>
