--- a/tracker/reports/orders/index.html
+++ b/tracker/reports/orders/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -274,13 +275,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <h1 id="_1">Список заказов</h1>
 <p>Список заказов предоставляет подробную информацию по каждому заказу, импортированному из CRM либо созданного в трекере (см. кодовый трекер). Для каждого заказа предоставляется последовательность посещений пользователя до этого заказа. Отчет строится за определенный период времени. По умолчанию он соответствует месяцу.</p>
 <h2 id="_2">Настройка отчета</h2>
-<p>Ниже описаны инструменты, с помощью которых вы можете настроить вид отчета:
+<p>Ниже описаны инструменты, с помощью которых вы можете настроить вид отчета:<br />
 <img alt="Пример отчета" src="../orders_1.png" /></p>
 <h2 id="_3">Добавление заказа <img alt="Цифра_1" src="../dig_1.png" /></h2>
-<p>Данный функционал предназначен для пользователей кодового трекера. В момент обращения пользователя следует спросить у него код заявки, отображаемый на сайте.
+<p>Данный функционал предназначен для пользователей кодового трекера. В момент обращения пользователя следует спросить у него код заявки, отображаемый на сайте.<br />
 Далее при добавлении заказа следует указать данный код, чтобы трекер ассоциировал заказ с посещением.</p>
 <p><img alt="Добавление заказа" src="../orders_1.png" /></p>
-<p><strong>Параметры заказа</strong><br/>
+<p><strong>Параметры заказа</strong><br/><br />
 В этом разделе приведены параметры, которые можно указать при добавлении заказа. <strong>Жирным</strong> обозначены обязательные параметры.</p>
 <table>
 <thead>
@@ -332,13 +333,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p>Каждому заказу соответствует цепочка посещений сайта позвонившего пользователя. Количество посещений в цепочке и набор параметров посещения могут отличаться в зависимости от паттернов поведения пользователя.</p>
 <p>Рассмотрим посещение из цепочки:</p>
 <p><img alt="Пример посещения" src="../orders_21.png" /></p>
-<p><strong>Порядковы номер посещения</strong><br/>
+<p><strong>Порядковы номер посещения</strong><br/><br />
 Каждое посещение имеет свой порядковый номер в цепочке. Порядковый номер отображается вверху информации о посещении (например, <img alt="Пример посещения" src="../calls_52.png" />)</p>
-<p><strong>Ассоциированные с заказом посещения</strong><br/>
-Ассоциированные с заказом посещения - посещения, которые можем однозначно сопоставить с заказом. Информация о таких посещениях (источники трафика, браузеры, устройства и пр.) ассоциируется с текущим заказом и будет использоваться далее в остальных отчетах.
-Такие посещения имеют следующий ярлык:
+<p><strong>Ассоциированные с заказом посещения</strong><br/><br />
+Ассоциированные с заказом посещения - посещения, которые можем однозначно сопоставить с заказом. Информация о таких посещениях (источники трафика, браузеры, устройства и пр.) ассоциируется с текущим заказом и будет использоваться далее в остальных отчетах.<br />
+Такие посещения имеют следующий ярлык:<br />
 <img alt="Ассоциированные посещения" src="../orders_22.png" /></p>
-<p><strong>Параметры посещения</strong><br/>
+<p><strong>Параметры посещения</strong><br/><br />
 Каждое посещение может иметь следующие параметры</p>
 <table>
 <thead>
