--- a/tracker-api/index.html
+++ b/tracker-api/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -145,14 +146,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="section">
               
                 <h1 id="_1">Введение</h1>
-<p>API сервиса <a href="./tracker">К☆50:Трекер позволяет получать информацию о звонках и заказах, не используя веб-интерфейс.
-Формировать отчеты, в том числе с помощью сегментации и параметризации.
-Для использования API Трекера необходимо создать <a href="./token_creation">авторизационый токен</a>. Необходимо отправлять авторизационный токен в каждом запросе к API.
-Для иллюстрации возможностей API в справочнике приведены примеры обращения к сервису.
+<p>API сервиса <a href="http://help.k50.ru/tracker/" target="_blank">К☆50:Трекер позволяет получать информацию о звонках и заказах, не используя веб-интерфейс.<br />
+Формировать отчеты, в том числе с помощью сегментации и параметризации.<br />
+Для использования API Трекера необходимо создать <a href="./token_creation">авторизационый токен</a>. Необходимо отправлять авторизационный токен в каждом запросе к API.<br />
+Для иллюстрации возможностей API в справочнике приведены примеры обращения к сервису.<br />
 API Трекера построен по REST-принципам.</p>
 <blockquote>
 <p>См. также</p>
-<p><a href="http://en.wikipedia.org/wiki/Representational_State_Transfer" target="_blank">Representational State Transfer (Wikipedia, english version)</a><br/>
+<p><a href="http://en.wikipedia.org/wiki/Representational_State_Transfer" target="_blank">Representational State Transfer (Wikipedia, english version)</a><br/><br />
 <a href="http://ru.wikipedia.org/wiki/REST" target="_blank">REST (Википедия, русская версия)</a></p>
 </blockquote>
               
@@ -199,5 +200,5 @@ API Трекера построен по REST-принципам.</p>
 
 <!--
 MkDocs version : 0.14.0
-Build Date UTC : 2016-01-15 14:12:16.935000
+Build Date UTC : 2016-02-04 21:12:05.694000
 -->
