--- a/tracker/calltracking/index.html
+++ b/tracker/calltracking/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -270,7 +271,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <h1 id="_1">Коллтрекинг</h1>
 <p>Коллтрекинг (call tracking) - это технология определения рекламных источников, с которых приходят звонки клиентов. Соотвественно, коллтрекинг подходит клиентам с большой долей обращений по телефону.</p>
 <h2 id="_2">Типы коллтркенига</h2>
-<p>Существует два типа коллтрекинга:
+<p>Существует два типа коллтрекинга:<br />
 Статический коллтрекинг  - позволяет закреплять номер телефона за определенным срезом данных. Данный тип коллтрекинга следует использовать, когда вам важна информация о звонках с конкретного источника (например, объявление в газете) без углублений в детали.</p>
 <p>Динамический коллтрекинг - позволяет закреплять номер телефона за пользователем, предоставляя подробную информацию о посещении, ассоциированном со звонком. Данный типа коллтрекинга следует использовать, когда важна информация о каждом посещении, приводящем к звонку (например, по каким ключевым словам приходят звонящие пользователи)</p>
 <h2 id="_3">Как подключить</h2>
