--- a/tracker/counters/initialization/index.html
+++ b/tracker/counters/initialization/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -268,7 +269,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="section">
               
                 <h1 id="_1">Инициализация счетчика</h1>
-<p>JavaScript-библиотека, отвечающая за работу счётчика загружается с URL http://cdn.k50.ru/k50/k50tracker2.js (https://k50-a.akamaihd.net/k50/k50tracker2.js - для https сайтов).
+<p>JavaScript-библиотека, отвечающая за работу счётчика загружается с URL http://cdn.k50.ru/k50/k50tracker2.js (https://k50-a.akamaihd.net/k50/k50tracker2.js - для https сайтов).<br />
 Код для подключения библиотеки доступен на странице редактирования счётчика. Библиотека может быть загружена асинхронным и синхронным способом, однако, её функционал при этом остаётся неизменным.</p>
 <h2 id="http">Пример для HTTP сайта</h2>
 <pre><code class="js">&lt;script src=&quot;http://cdn.k50.ru/k50/k50tracker2.js&quot;&gt;&lt;/script&gt;
