--- a/tracker/integration/tracker-api/index.html
+++ b/tracker/integration/tracker-api/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -264,8 +265,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="section">
               
                 <h1 id="api">Использование API трекера</h1>
-<p>API сервиса К50:Трекер позволяет получать информацию о звонках и заказах, не используя веб-интерфейс.
-Подробнее читайте в <a href="http://help.k50.ru/tracker-api" target="_blank">документации API</a></p>
+<p>API сервиса К50:Трекер позволяет получать информацию о звонках и заказах, не используя веб-интерфейс.<br />
+Подробнее читайте в <a href="http://help.k50.ru/tracker-api/" target="_blank">документации API</a></p>
               
             </div>
           </div>
