--- a/tracker/reports/report-configurator/index.html
+++ b/tracker/reports/report-configurator/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="T2KxAX2AczTE-InwHcTK-odclFEfghlVAjvU1z3jCWg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -284,33 +285,33 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="section">
               
                 <h1 id="_1">Отчеты</h1>
-<p>Отчеты предоставляют статистическую информацию о сайте и обращениях посетителей.
+<p>Отчеты предоставляют статистическую информацию о сайте и обращениях посетителей.<br />
 Каждый отчет содержит показатели, объединенные в группы (например, по типу трафика). Отчет строится за определенный период времени. По умолчанию он соответствует месяцу. Данные отображаются в таблице и на диаграмме.</p>
 <h2 id="_2">Настройка отчета</h2>
-<p>Ниже описаны инструменты, с помощью которых вы можете настроить вид отчета:
+<p>Ниже описаны инструменты, с помощью которых вы можете настроить вид отчета:<br />
 <img alt="Пример отчета" src="../report_1.png" /></p>
 <h2 id="_3">Список отчетов <img alt="Цифра_1" src="../dig_1.png" /></h2>
-<p>Открывает список готовых отчетов. Данные отчеты рекомендуется использовать в качестве примера для создания собственных.
+<p>Открывает список готовых отчетов. Данные отчеты рекомендуется использовать в качестве примера для создания собственных.<br />
 <img alt="Готовые отчеты" src="../report_11.png" /></p>
 <h2 id="csv">Выгрузка CSV <img alt="Цифра_2" src="../dig_2.png" /></h2>
-<p>Позволяет выгружать отчет в формате CSV.
-В выгрузке будут предоставлены данные:
-- по указанным измерениям, метрикам 
-- за выбранный период 
+<p>Позволяет выгружать отчет в формате CSV.<br />
+В выгрузке будут предоставлены данные:<br />
+- по указанным измерениям, метрикам <br />
+- за выбранный период <br />
 - с учетом активных фильтров.</p>
 <h2 id="_4">Метрики на диаграмме <img alt="Цифра_3" src="../dig_3.png" /></h2>
 <p>Позволяет выбрать метрики, которые будут отображаться на диаграмме. Выбрать можно только добавленные в отчет метрики.<br />
-<img alt="Метрики на диаграмме" src="../report_41.png" />
+<img alt="Метрики на диаграмме" src="../report_41.png" /><br />
 Круговая диаграмма отображает данные для 1 метрики. Линейная диаграмма позволяет отображать данные сразу для нескольких метрик.</p>
 <h2 id="_5">Период отчета <img alt="Цифра_4" src="../dig_4.png" /></h2>
 <p>Вы можете выбрать календарный период времени, за который будет построен отчет. По умолчанию отображаются данные за месяц. Доступны стандартные диапазоны дат, также можно выбрать собственный диапазон.</p>
 <p><img alt="Период отчета" src="../report_51.png" /></p>
 <h2 id="_6">Виды диаграмм <img alt="Цифра_5" src="../dig_5.png" /></h2>
 <p>Позволяет выбрать диагарамму, подходящую для конкретной задачи. В данный момент доступны следующие виды диаграмм:</p>
-<p><strong>Линейная</strong><br/>
+<p><strong>Линейная</strong><br/><br />
 Показывает изменения абсолютных значений измеряемых величин во времени.</p>
 <p><img alt="Линейная диаграмма" src="../report_62.png" /></p>
-<p><strong>Круговая</strong><br/>
+<p><strong>Круговая</strong><br/><br />
 Показывает распределение величин по группам.</p>
 <p><img alt="Круговая диаграмма" src="../report_61.png" /></p>
 <h2 id="_7">Формат отчета <img alt="Цифра_6" src="../dig_6.png" /></h2>
@@ -318,7 +319,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p><strong>Древовидный список</strong><br/></p>
 <p>Данные группируются <strong>последовательно</strong> по каждому выбранному измерению, формируя древовидную структуру.</p>
 <p><img alt="Древовидный список" src="../report_601.png" /></p>
-<p><strong>Линейный список</strong><br/>
+<p><strong>Линейный список</strong><br/><br />
 Данные группируются <strong>одновременно</strong> по всем выбранным измерениям, формируя линейную структуру.</p>
 <p><img alt="Древовидный список" src="../report_602.png" /></p>
 <h2 id="_8">Измерения <img alt="Цифра_7" src="../dig_7.png" /></h2>
@@ -330,9 +331,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p><strong>Отображение на диаграмме</strong></p>
 <p>Трекер позволяет отображать любой срез данных на диаграмме. Для отображения среза необоходимо кликнуть по полю слева от него:</p>
 <p><img alt="Отображение измерений на диаграмме" src="../report_73.png" /></p>
-<p>В зависимости от выбранных сегментов поле может выглядеть следующим образом:
-<img alt="Пустое поле" src="../report_76.png" /> - сегмент не отображается на графике
-<img alt="Активное поле" src="../report_75.png" /> - сегмент отображается на графике
+<p>В зависимости от выбранных сегментов поле может выглядеть следующим образом:<br />
+<img alt="Пустое поле" src="../report_76.png" /> - сегмент не отображается на графике<br />
+<img alt="Активное поле" src="../report_75.png" /> - сегмент отображается на графике<br />
 <img alt="Активно дочернее поле" src="../report_74.png" /> - вложенный сегмент отображается на графике</p>
 <h2 id="_9">Метрики <img alt="Цифра_8" src="../dig_8.png" /></h2>
 <p>Позволяет выбрать метрики, которые будут отображаться в отчете. Для выбранных метрик можно задать порядок отображения в отчете.</p>
@@ -342,7 +343,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p>Сортировка будет осуществляться для каждой группировки в соответствии с их порядком.</p>
 <p><img alt="Сортировка метрик" src="../report_82.png" /></p>
 <h2 id="_10">Фильтры <img alt="Цифра_9" src="../dig_9.png" /></h2>
-<p>Фильтры позволяют работать с данными, удовлетворяющими определенным условиям.
+<p>Фильтры позволяют работать с данными, удовлетворяющими определенным условиям.<br />
 Условия могут применяться на метрики и измерения, выбранные в отчете (подробнее ниже).</p>
 <p><img alt="Настройка фильтра" src="../report_21.png" /></p>
 <p>Используемые фильтры отображаются в отдельной панели, из которой их можно оперативно убрать.</p>
