--- a/tracker-api/index.html
+++ b/tracker-api/index.html
@@ -146,7 +146,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="section">
               
                 <h1 id="_1">Введение</h1>
-<p>API сервиса <a href="http://help.k50.ru/tracker/" target="_blank">К☆50:Трекер позволяет получать информацию о звонках и заказах, не используя веб-интерфейс.<br />
+<p>API сервиса <a href="http://help.k50.ru/tracker/" target="_blank">К☆50:Трекер</a> позволяет получать информацию о звонках и заказах, не используя веб-интерфейс.<br />
 Формировать отчеты, в том числе с помощью сегментации и параметризации.<br />
 Для использования API Трекера необходимо создать <a href="./token_creation">авторизационый токен</a>. Необходимо отправлять авторизационный токен в каждом запросе к API.<br />
 Для иллюстрации возможностей API в справочнике приведены примеры обращения к сервису.<br />
