--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700|Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="./css/theme.css" type="text/css" />
-  <link rel="stylesheet" href="./css/theme_extra.css" type="text/css" />
-  <link rel="stylesheet" href="./css/highlight.css">
+  <link rel="stylesheet" href="css/theme-main.css" type="text/css" />
+  <link rel="stylesheet" href="css/theme_extra-main.css" type="text/css" />
+  <link rel="stylesheet" href="css/highlight-main.css">
     
   <script>
     // Current page data
@@ -27,7 +27,7 @@
   <script type="text/javascript" src="./js/highlight.pack.js"></script>
   <script src="./js/theme.js"></script>
   <script>var base_url = '.';</script>
-  <script data-main="./mkdocs/js/search.js" src="./mkdocs/js/require.js"></script>
+  <script data-main="./mkdocs/js/search.js" src="mkdocs/js/require.js"></script>
 
  
 </head>
