--- a/404.html
+++ b/404.html
@@ -16,9 +16,9 @@ permalink: /404.html
   
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700|Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="css/theme-main.css" type="text/css" />
-  <link rel="stylesheet" href="css/theme_extra-main.css" type="text/css" />
-  <link rel="stylesheet" href="css/highlight-main.css">
+  <link rel="stylesheet" href="./css/theme.css" type="text/css" />
+  <link rel="stylesheet" href="./css/theme_extra.css" type="text/css" />
+  <link rel="stylesheet" href="./css/highlight.css">
     
   <script>
     // Current page data
