--- a/404.html
+++ b/404.html
@@ -16,21 +16,21 @@ permalink: /404.html
   
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700|Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="./css/theme.css" type="text/css" />
-  <link rel="stylesheet" href="./css/theme_extra.css" type="text/css" />
-  <link rel="stylesheet" href="./css/highlight.css">
+  <link rel="stylesheet" href="/css/theme.css" type="text/css" />
+  <link rel="stylesheet" href="/css/theme_extra.css" type="text/css" />
+  <link rel="stylesheet" href="/css/highlight.css">
     
   <script>
     // Current page data
     var mkdocs_page_name = "None";
   </script>
   
-    <script src="./js/jquery-2.1.1.min.js"></script>
-  <script src="./js/modernizr-2.8.3.min.js"></script>
-  <script type="text/javascript" src="./js-main/highlight.pack.js"></script>
-  <script src="./js/theme.js"></script>
+    <script src="/js/jquery-2.1.1.min.js"></script>
+  <script src="/js/modernizr-2.8.3.min.js"></script>
+  <script type="text/javascript" src="/js-main/highlight.pack.js"></script>
+  <script src="/js/theme.js"></script>
   <script>var base_url = '.';</script>
-  <script data-main="./mkdocs/js/search.js" src="mkdocs/js/require.js"></script>
+  <script data-main="/mkdocs/js/search.js" src="/mkdocs/js/require.js"></script>
 
  
 </head>
