--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@ permalink: /404.html
   
     <script src="/js/jquery-2.1.1.min.js"></script>
   <script src="/js/modernizr-2.8.3.min.js"></script>
-  <script type="text/javascript" src="/js-main/highlight.pack.js"></script>
+  <script type="text/javascript" src="/js/highlight.pack.js"></script>
   <script src="/js/theme.js"></script>
   <script>var base_url = '.';</script>
   <script data-main="/mkdocs/js/search.js" src="/mkdocs/js/require.js"></script>
