--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ permalink: /404.html
   <title>Справка K☆50</title>
   
 
-  <link rel="shortcut icon" href="./img/favicon.ico">
+  <link rel="shortcut icon" href="/img/favicon.ico">
 
   
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700|Inconsolata:400,700' rel='stylesheet' type='text/css'>
@@ -46,7 +46,7 @@ permalink: /404.html
 
   <h1 id="search">Мы не нашли эту страницу :( Попробуйте использовать поиск</h1>
 
-  <form id="content_search" action="index.html">
+  <form id="content_search" action="/index.html">
     <span role="status" aria-live="polite" class="ui-helper-hidden-accessible"></span>
     <input name="q" id="mkdocs-search-query" type="text" class="search_input search-query ui-autocomplete-input" placeholder="Введите текст для поиска" autocomplete="off" autofocus>
   </form>
