--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@ permalink: /404.html
 <head>
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <meta name="theme-color" content="#c20000">
   <title>Справка K☆50</title>
   
 
