--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#999999">
+  <meta name="theme-color" content="#c20000">
   <title>Справка K☆50</title>
   
 
