--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#c20000">
+  <meta name="msapplication-navbutton-color" content="#c20000">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#c20000">
+   <link rel="icon" type="image/png" href="/img/android-chrome-192x192.png" sizes="192x192">
   <title>Справка K☆50</title>
   
 
