--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@ permalink: /404.html
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#c20000">
   <meta name="msapplication-navbutton-color" content="#c20000">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="#c20000">
    <link rel="icon" type="image/png" href="/img/android-chrome-192x192.png" sizes="192x192">
   <title>Справка K☆50</title>
