date last update

--- a/tracker/calltracking/supported-regions/index.html
+++ b/tracker/calltracking/supported-regions/index.html
@@ -740,9 +740,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <hr/>
 
-  <div role="contentinfo">
+  <div role="contentinfo" class="contentinfo">
     <!-- Copyright etc -->
-    
+    <p>Дата последнего обновления - 2016-03-08</p>
+    <p>2011–2016 <a href="http://k50.ru" target="_blank">K☆50</a></p>
   </div>
 
 </footer>
