--- a/tracker-api/api-requests/get-calls-stat/index.html
+++ b/tracker-api/api-requests/get-calls-stat/index.html
@@ -339,6 +339,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       ...
     ]
   }
+]  
 </code></pre>
 
 <table>
@@ -479,9 +480,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <hr/>
 
-  <div role="contentinfo">
+  <div role="contentinfo" class="contentinfo">
     <!-- Copyright etc -->
-    
+    <p>Дата последнего обновления - 2016-03-08</p>
+    <p>2011–2016 <a href="http://k50.ru" target="_blank">K☆50</a></p>
   </div>
 
 </footer>
