--- a/tracker-api/index.html
+++ b/tracker-api/index.html
@@ -292,9 +292,10 @@ API Трекера построен по REST-принципам.</p>
 
   <hr/>
 
-  <div role="contentinfo">
+  <div role="contentinfo" class="contentinfo">
     <!-- Copyright etc -->
-    
+    <p>Дата последнего обновления - 2016-03-08</p>
+    <p>2011–2016 <a href="http://k50.ru" target="_blank">K☆50</a></p>
   </div>
 
 </footer>
