--- a/tracker/counters/javascript-api/index.html
+++ b/tracker/counters/javascript-api/index.html
@@ -596,9 +596,10 @@ phones: [
 
   <hr/>
 
-  <div role="contentinfo">
+  <div role="contentinfo" class="contentinfo">
     <!-- Copyright etc -->
-    
+    <p>Дата последнего обновления - 2016-03-08</p>
+    <p>2011–2016 <a href="http://k50.ru" target="_blank">K☆50</a></p>
   </div>
 
 </footer>
