--- a/404.html
+++ b/404.html
@@ -56,6 +56,15 @@ permalink: /404.html
   </form>
 
   <div id="mkdocs-search-results">
+      <div class="products row">
+          <div class="item col-6">
+              <a href="http://help.k50.ru/optimisator"><div class="product-title col-12">K☆50:Оптимизатор</div><div class="product-description col-11">Оптимизируйте рекламные кампании с помощью Статистики, Правил и Стратегий K☆50</div></a>
+          </div>
+          <div class="item col-6">
+              <a href="http://help.k50.ru/generator"><div class="product-title col-12">K☆50:Генератор</div><div class="product-description col-11">Автоматически генерируйте и обновляйте рекламные кампании на основе товарного фида</div></a>
+          </div>
+
+      </div>
     <div class="products row">  
      <div class="item col-6"> 
        <a href="http://help.k50.ru/tracker"><div class="product-title col-12">K☆50:Трекер</div><div class="product-description col-11">Отслеживайте источники звонков, offline и online заказов</div></a>
