--- a/optimisator/connect/calltrackingru/index.html
+++ b/optimisator/connect/calltrackingru/index.html
@@ -384,7 +384,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <h1 id="calltrackingru">Интеграция с Calltracking.ru</h1>
 <p>Вы можете передавать данные о звонках из Calltracking.ru в К50:Оптимизатор. Они позволят вам проводить более детальный анализ рекламных кампаний с помощью статистики.</p>
 <h2 id="_1">Получение токена доступа</h2>
-<p>Для подключения Calltracking.ru к К50:Оптимизатору вам необходимо получить идентификатор сайта и токен доступа.</p>
+<p>Для подключения Calltracking.ru к К50:Оптимизатору вам необходимо получить идентификатор сайта и токен доступа. Для этого вам необходимо зайти в интерфейс вашего кабинета Calltracking.ru в раздел <code>Настройки &gt; Интеграции &gt; K50</code> и скопировать оттуда требуемые параметры.</p>
+<p><img alt="api calltracking" src="../calltrackingru_1.png" /></p>
+<div class="admonition important">
+<p class="admonition-title">Обратите внимание</p>
+<p>Интеграция должна быть включена. В противном случае данные не будут поступать в оптимизатор.</p>
+</div>
 <h2 id="_2">Подключение к Оптимизатору</h2>
 <p>Подключение к Оптимизатору осуществляется через подключение <strong>Учета звонков и заказов</strong></p>
 <p><img alt="Учет звонков и заказов" src="../k50_11.png" /></p>
